Almost done with the file transfer, need to check the is.readAllBytes() method and change it