@@ -16,19 +16,21 @@ import java.security.spec.EncodedKeySpec;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.X509EncodedKeySpec;
 
+
 public class Client {
 
     public static void main(String[] args) {
         // TODO Auto-generated method stub
 
-
         try {
 
-            String path = "D:\\Documents\\Quinto Semestre\\ProRed\\Test\\Enviar\\java.pdf";
+            //Pedir el path del archivo
+            String path = "D:\\Documents\\Octavo Semestre\\Ciberseguridad\\Workspace\\Mensaje.txt";
             File file = new File(path);
-            String ab = file.getAbsolutePath();
-            FileInputStream fis = new FileInputStream(file);
+//            String ab = file.getAbsolutePath();
+//            FileInputStream fis = new FileInputStream(file);
 
+            //Empezando la conexion TCP
             System.out.println("Enviando solicitud...");
 
             //Socket es la puerta de conexion o comunicacion
@@ -40,41 +42,40 @@ public class Client {
 
             System.out.println("Conectados");
 
-            File publicKeyFile = new File("publicKey");
-            byte[] publicKeyBytes = Files.readAllBytes(publicKeyFile.toPath());
+            System.out.println("HOLA");
+            //Recibimos la clave publica
+            InputStream is = socket.getInputStream();
+            //Necesitamos cambiar esto para leer solo los Bytes de la clave
+            byte[] publicKeyBytes = is.readAllBytes();
+            System.out.println("Lo recibo");
 
+            //Recuperamos la instancia de la clave publica
             KeyFactory keyFactory = KeyFactory.getInstance("RSA");
-            EncodedKeySpec publicKeySpec = new X509EncodedKeySpec(publicKeyBytes);
+            X509EncodedKeySpec publicKeySpec = new X509EncodedKeySpec(publicKeyBytes);
             PublicKey publicKey = keyFactory.generatePublic(publicKeySpec);
 
+            //Ciframos la informacion del archivo
             byte[] fileBytes = Files.readAllBytes(Path.of(file.getPath()));
 
             Cipher encryptCipher = Cipher.getInstance("RSA");
             encryptCipher.init(Cipher.ENCRYPT_MODE, publicKey);
             byte[] encryptedFileBytes = encryptCipher.doFinal(fileBytes);
 
+            //Mandamos el archivo cifrado
+            FileOutputStream stream = new FileOutputStream("EncryptedFile");
+            stream.write(encryptedFileBytes);
+            OutputStream os = socket.getOutputStream();
+            os.write(encryptedFileBytes);
 
 
-//            BufferedReader in = new BufferedReader(new InputStreamReader(socket.getInputStream()));
-//            String publicKey = in.readLine();
-//            System.out.println("Publica: "+publicKey);
+            is.close();
+            stream.close();
 
 
 
-        } catch (IOException e) {
+
+        } catch (IOException | NoSuchAlgorithmException | InvalidKeySpecException | NoSuchPaddingException | IllegalBlockSizeException | BadPaddingException | InvalidKeyException e) {
             // TODO Auto-generated catch block
-            e.printStackTrace();
-        } catch (NoSuchAlgorithmException e) {
-            e.printStackTrace();
-        } catch (InvalidKeySpecException e) {
-            e.printStackTrace();
-        } catch (NoSuchPaddingException e) {
-            e.printStackTrace();
-        } catch (IllegalBlockSizeException e) {
-            e.printStackTrace();
-        } catch (BadPaddingException e) {
-            e.printStackTrace();
-        } catch (InvalidKeyException e) {
             e.printStackTrace();
         }
     }
